force-app/main/default/objects/Cadence_Step__c/Cadence_Step__c.object-meta.xml
<CustomObject>
    <label>Cadence Touchpoint Step</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Cadence Touchpoint Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cadence_Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>