force-app/main/default/objects/Cadence_Step__c/fields/Allow_Repeat__c.field-meta.xml
<CustomField>
    <fullName>Allow_Repeat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Repeat?</label>
    <type>Checkbox</type>
</CustomField>