force-app/main/default/objects/Cadence_Step__c/fields/Allow_Skip__c.field-meta.xml
<CustomField>
    <fullName>Allow_Skip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Step to be Skipped?</label>
    <type>Checkbox</type>
</CustomField>