force-app/main/default/objects/Cadence_Step__c/fields/CadenceId__c.field-meta.xml
<CustomField>
    <fullName>CadenceId__c</fullName>
    <label>Cadence Name</label>
    <referenceTo>Cadence__c</referenceTo>
    <relationshipLabel>Cadence_Steps</relationshipLabel>
    <relationshipName>Cadence_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>