force-app/main/default/objects/Cadence_Step__c/fields/EmailTemplateIds__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateIds__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>A list of comma separated email template ids for the users to be able to choose from.</inlineHelpText>
    <label>Email Template Ids</label>
    <length>200</length>
    <type>Text</type>
</CustomField>