force-app/main/default/objects/Cadence_Step__c/fields/EmailTemplateNames__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateNames__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The names of the templates associated with the template ids.</inlineHelpText>
    <label>Email Template Names</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>