force-app/main/default/objects/Cadence_Step__c/fields/Generate_Activity__c.field-meta.xml
<CustomField>
    <fullName>Generate_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Activity?</label>
    <type>Checkbox</type>
</CustomField>