force-app/main/default/objects/Cadence_Step__c/fields/Wait_Days__c.field-meta.xml
<CustomField>
    <fullName>Wait_Days__c</fullName>
    <label>Wait Days (Weekdays)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>