force-app/main/default/objects/Cadence_Step__c/fields/WeekEnd__c.field-meta.xml
<CustomField>
    <fullName>WeekEnd__c</fullName>
    <inlineHelpText>For an ongoing cadence, which week of the month does this step end? The end of the week is Friday.</inlineHelpText>
    <label>Week End</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>WeekStart__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>