force-app/main/default/objects/Cadence_Step__c/fields/WeekStart__c.field-meta.xml
<CustomField>
    <fullName>WeekStart__c</fullName>
    <inlineHelpText>For an ongoing cadence, which week of the month is this step valid for? The start of the week is Monday.</inlineHelpText>
    <label>Week Start</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>