force-app/main/default/objects/Cadence_Step__c/listViews/With_Email_Templates.listView-meta.xml
<ListView>
    <fullName>With_Email_Templates</fullName>
    <columns>NAME</columns>
    <columns>CadenceId__c</columns>
    <columns>EmailTemplateIds__c</columns>
    <columns>EmailTemplateNames__c</columns>
    <columns>Step_Number__c</columns>
    <columns>Allow_Repeat__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EmailTemplateIds__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>With Email Templates</label>
</ListView>